force-app/main/default/objects/Out_of_Office__c/Out_of_Office__c.object-meta.xml
<CustomObject>
    <description>Blocks availability for a date range with optional redirect to another user</description>
    <label>Out of Office</label>
    <nameField>
        <displayFormat>OOO-{00000}</displayFormat>
        <label>OOO ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Out of Office Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>