force-app/main/default/objects/Out_of_Office__c/fields/Absence_Type__c.field-meta.xml
<CustomField>
    <fullName>Absence_Type__c</fullName>
    <label>Absence Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>