force-app/main/default/objects/Out_of_Office__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>500</length>
    <type>Text</type>
</CustomField>