force-app/main/default/objects/Out_of_Office__c/fields/Redirect_To__c.field-meta.xml
<CustomField>
    <fullName>Redirect_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional user to redirect bookings to during OOO period</description>
    <label>Redirect To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>OOO Redirects Received</relationshipLabel>
    <relationshipName>OOO_Redirects</relationshipName>
    <type>Lookup</type>
</CustomField>