force-app/main/default/objects/Out_of_Office__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Out of Office</relationshipLabel>
    <relationshipName>Out_of_Office</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>